# ProRail

./: .gitignore  Adviesrapport.docx  AnalyseEnModellen.ipynb  LinearRegressionModel.joblib  README.md  Untitled.ipynb  Validatieset 2024-2025 Excel.csv  analyse.ipynb  analyse_en_model.ipynb  analyse_en_model2.ipynb  backend.py  correlaties1.ipynb  correlaties2.ipynb  data.json  main - 副本.ipynb  main.ipynb  predict.py  pyproject.toml  test model code
Adviesrapport/: Adviesrapport.aux  Adviesrapport.tex  Adviesrapport.toc  main.aux  main.tex  main.toc
Flask/: app.py  config.py  forms.py  models.py  old.py  predict.py  predictor.py  requirements.txt  routes.py
Flask/instance/: site.db  user.db
Flask/templates/: base.html  dashboard.html  home.html  index.html  login.html  old.html  prediction.html  register.html  report.html
Voorstel/: Voorstel.aux  Voorstel.tex  main.toc
